# youtube-downloader

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  robots.txt  sitemap.xml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: binaries.rs  lib.rs
src-tauri/src/commands/: download.rs  mod.rs  playlist.rs  settings.rs
src-tauri/src/ytdlp/: mod.rs  progress.rs  runner.rs
src/lib/: parseUrls.ts  tauri.ts  types.ts
src/lib/components/: AdvancedPanel.svelte  FolderPicker.svelte  QueueItem.svelte  QueuePanel.svelte  SetupScreen.svelte  UrlInput.svelte
src/lib/stores/: queue.svelte.ts  settings.svelte.ts
