[package]
name = "lumi-downloader"
version = "1.6.2"
description = "A fast, open-source video downloader for macOS, Windows, and Linux"
authors = []
edition = "2021"

[package.metadata.tauri-build]
version = "2"

[lib]
name = "youtube_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "5"
dirs = "5"
regex = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
